--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,37 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/history": "^4.7.9",
-    "@types/react-beautiful-dnd": "^13.1.1",
-    "@types/react-dom": "17.0.9",
-    "@types/react-onclickoutside": "^6.7.4",
-    "@types/react-redux": "^7.1.18",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-timeago": "^4.1.3",
-    "@types/uuid": "^8.3.1",
-    "@types/yup": "^0.29.13",
-    "connected-react-router": "^6.9.1",
-    "formik": "^2.2.9",
-    "history": "^5.0.0",
-    "query-string": "^7.0.1",
+    "@types/history": "^5.3.3",
+    "@types/react-beautiful-dnd": "^13.1.5",
+    "@types/react-dom": "^17.0.19",
+    "@types/react-onclickoutside": "^6.11.3",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-timeago": "^6.2.1",
+    "@types/uuid": "^9.0.3",
+    "@types/yup": "^1.0.3",
+    "connected-react-router": "^6.9.3",
+    "formik": "^2.4.5",
+    "history": "^5.3.0",
+    "postcss": "^8.4.38",
+    "postcss-safe-parser": "^7.0.1",
+    "query-string": "^8.1.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^13.2.0",
     "react-dom": "^17.0.2",
-    "react-markdown": "^6.0.2",
-    "react-onclickoutside": "^6.11.2",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-timeago": "^6.2.1",
-    "redux": "^4.1.0",
-    "reselect": "^4.0.0",
-    "stripe": "^8.161.0",
+    "react-markdown": "^8.0.7",
+    "react-onclickoutside": "^6.12.1",
+    "react-redux": "^7.2.9",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "5.0.1",
+    "react-timeago": "^7.1.0",
+    "redux": "^4.2.1",
+    "reselect": "^4.1.8",
     "typesafe-actions": "^5.1.0",
-    "typescript": "4.3.5",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.9"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.1",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,10 +45,21 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "overrides": {
+    "postcss-safe-parser": {
+      "postcss": "^8.4.38"
+    }
+  }
 }
